# inis-reader

./: .gitignore  CMakeLists.txt  README.md
src/: IniParser.cpp  IniParser.h
tests/: IniParserTest.cpp
